--- a/DemoFormProject/templates/nba.html
+++ b/DemoFormProject/templates/nba.html
@@ -12,12 +12,9 @@
 </div>
 <div class="row my-grid-borders">
     <div class="col-md-2 my-grid-borders"><img class="contain" src={{ img1 }} alt='Missing'></div>
-    <div class="col-md-2 my-grid-borders"><img class="contain" src={{ img2 }} alt='Missing'></div>
-    <div class="col-md-2 my-grid-borders"><img class="contain" src={{ img3 }} alt='Missing'></div>
-    <div class="col-md-2 my-grid-borders"><img class="contain" src={{ img4 }} alt='Missing'></div>
 </div>
 <div class="row my-grid-borders">
-    <h2>Trump's Dataset Fields</h2>
+    <h2>nba injurys Dataset Fields</h2>
 </div>
 <div class="row my-grid-borders">
     <table class="table table-striped">
@@ -29,24 +26,20 @@
         </thead>
         <tbody>
             <tr>
-                <td>Start Date</td>
-                <td class="heb">תאריך ההתחלה של דגימת הפופולריות של הנשיא</td>
+                <td>Date</td>
+                <td class="heb">התאריך המדויק בו קרתה הפציעה</td>
             </tr>
             <tr>
-                <td>End Date</td>
-                <td>Add more text</td>
+                <td>Team</td>
+                <td>הקבוצה בה השחקן הפצוע שיחק</td>
             </tr>
             <tr>
-                <td>Approbving</td>
-                <td>Add more text</td>
+                <td>Relinquished</td>
+                <td>שמו המלא של השחקן שנפצע</td>
             </tr>
             <tr>
-                <td>Disapproving</td>
-                <td>Add more text</td>
-            </tr>
-            <tr>
-                <td>Unsure/NoData</td>
-                <td>Add more text</td>
+                <td>Notes</td>
+                <td>הסבר על סוג הפציעה</td>
             </tr>
         </tbody>
     </table>
