--- a/DemoFormProject/templates/index.html
+++ b/DemoFormProject/templates/index.html
@@ -1,33 +1,48 @@
-{% extends "layout.html" %}
+﻿﻿{% extends "layout.html" %}
+
 
 {% block content %}
 
 <div class="jumbotron">
-    <h1>Flask</h1>
-    <p class="lead">Flask roee is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://flask.pocoo.org/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <h1 class="heb">NBA injuries</h1>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            Flask gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+    <div class="col-md-6">
+        <h2 class="heb">injuries during the last decade in the NBA</h2>
+        <p class="heb">
+            פציעות בספורט הוא גרום עיקרי לפרישות או לירידה ברמת המשחק ברחבי העולם ובכל ענפי הספורט
+            <br /><br />
+            האתר יעסוק בפציעות בליגת הכדורסל הטובה בעולם ובעזרתו נוכל לנתח את הפציעה הנפוצה ביותר ואת הקבוצה 
+            עם הכי הרבה פציעות וכך אולי נוכל גם לקשר לשיטת האימון או לרופאי הקבוצה.
+            <br /><br />
+            כדי להציג מועמדות לנשיאות, אדם חייב למלא שלושה תנאים. הוא חייב להיוולד בארה"ב, הוא חייב להיות בן 35 ומעלה והוא חייב לגור במדינה במשך 14 שנים לפחות.
+            הנשיא נבחר לתקופת כהונה של ארבע שנים. הוא יכול להיבחר לתקופה נוספת של ארבע שנים, אבל לא יותר מכך.
+            <br /><br />
+            הפופולריות של הנשיאים תוך כדי כהונתם, היא נתון סטיסטי שמעניין מאוד את הציבור האמריקאי ובכלל. לנתונים אלה יש השפעה פוליטית משמעותית, הם מכוונים את מדיניות הנשיא והממשל כולו, סוג של משוב מיידי על תפקוד הזרוע המבצעת. לנתונים אלה יש משנה חשיבות לקראת בחירות הקדנציה השניה של נשיא מכהן.
+            <br /><br />
+            בעבודה זה אאפשר לבחון את נתוני הפופולריות של אבעת הנשיאים בתקופות שיגדיר המשתמש ואתן את היכולת להשוות בין הנשיאים בתקופות מקבילות של כהונתם
+
         </p>
-        <p><a class="btn btn-default" href="http://flask.pocoo.org/docs/">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>The Python Package Index is a repository of software for the Python programming language.</p>
-        <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Learn more &raquo;</a></p>
+    <div class="col-md-1">
     </div>
-    <div class="col-md-4">
-        <h2>Microsoft Azure</h2>
-        <p>You can easily publish to Microsoft Azure using Visual Studio. Find out how you can host your application using a free trial today.</p>
-        <p><a class="btn btn-default" href="http://azure.microsoft.com">Learn more &raquo;</a></p>
+    <div class="col-md-5">
+        <br /><br /><br /><br /><br />
+        <td>
+            <img src="https://d29m18w01sxjzp.cloudfront.net/th_q_750_390_61774_westbrookrussellinjury.jpg" width="300" height="200" />
+        </td>
+    </div>
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-5">
+        <td>
+            <img src="https://www.myrecordjournal.com/getattachment/454b47b6-4832-4455-a480-4b3c0f077436/attachment" width="300" height="200" />
+        </td>
     </div>
 </div>
+
+
+
 
 {% endblock %}
