--- a/DemoFormProject/templates/about.html
+++ b/DemoFormProject/templates/about.html
@@ -2,9 +2,50 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
 
-<p>Use this area to provide additional information.</p>
 
-{% endblock %}
+<div class="row">
+    <img class="contain" src={{ img_tichonet }} alt='Missing'>
+</div>
+<div class="row">
+
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <h2 class="heb"></h2>
+        <p class="heb">
+
+        </p>
+    </div>
+    <div class="col-md-8">
+        <h2 class="heb">על הפרויקט</h2>
+        <p class="heb">
+            הפרויקט הינו במסגרת מקצוע "מדעי הנתונים", של תלמידי שכבת י', תש"פ בתיכונט ע"ש אלתרמן בתל אביב.
+            <br /><br />
+            הפרויקט משלב שני תחומי ידע עיקריים:
+            <br /><br />
+            * תכנות בסביבת האינטרנט
+            <br />
+            * מדעי הנתונים
+            <br /><br />
+            במסגרת הפרויקט איתרתי מאגרי מידע ברשת ובכוונתי לבנות  סביבם אתר אינטרנט המאפשר גישה אל מאגרי המידע, ניתוח נתונים והצגתם בצורה נוחה למשתמשים. האתר יאפשר למשתמש לחקור את הנתונים בתחום הנבחר ולנסות להגיע לתובנות ומסקנות בעלות ערך.
+            <br /><br />
+            הפרויקט יתבסס על המרכיבים הטכנולוגיים הבאים:
+            <br /><br />
+            * שפת פייתון.
+            <br />
+            * ספריית Pandas.
+            <br />
+            * תשתית Flask לבניית שרת אינטרנט.
+            <br />
+            האתר יהיה בנוי סביב פציעות בליגת הכדורסל הטובה בעולם והמשתמשים יוכלו לחקור את הפציעות שקרו בעשור האחרון ולפי זה הם יוכלו גם להסיק לאיזה קבוצה יש את שיטת האימונים הבטוחה ביותר או את איכות רופאי הקבוצה
+        </p>
+    </div>
+</div>
+
+
+
+
+
+
+     {% endblock %}
