--- a/DemoFormProject/templates/contact.html
+++ b/DemoFormProject/templates/contact.html
@@ -1,20 +1,21 @@
-{% extends "layout.html" %}
+﻿﻿{% extends "layout.html" %}
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div class="row">
+    <img class="contain" src={{ img_tichonet }} alt='Missing'>
+</div>
+<div class="row">
+    <h2></h2>
+    <br /><br />
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <h2 class="heb">Roee Glikman - רועי גליקמן</h2>
+        <h4 class="heb">Email: Roee.glikman@gmail.com</h4>
+    </div>
+    
 
 {% endblock %}
