--- a/DemoFormProject/templates/contact.html
+++ b/DemoFormProject/templates/contact.html
@@ -8,14 +8,21 @@
     <img class="contain" src={{ img_tichonet }} alt='Missing'>
 </div>
 <div class="row">
-    <h2></h2>
-    <br /><br />
-</div>
-<div class="row">
     <div class="col-md-6">
-        <h2 class="heb">Roee Glikman - רועי גליקמן</h2>
-        <h4 class="heb">Email: Roee.glikman@gmail.com</h4>
+        <h2 class="eng">Roee Glikman</h2>
+        <h4 class="eng">Email: Roee.glikman@gmail.com</h4>
+        <h4 class="eng">Phone number: 054-2883994</h4>
     </div>
-    
+    <div class="row">
+        <h2></h2>
+        <br /><br />
+    </div>
+    <div class="row">
+        <div class="input submit">
+            <form action="http://www.tichonet.com/BRPortal/br/P100.jsp">
+                <input type="submit" value="This is my school site" />
+            </form>
+        </div>
+    </div>
 
-{% endblock %}
+    {% endblock %}
