--- a/DemoFormProject/templates/index.html
+++ b/DemoFormProject/templates/index.html
@@ -4,17 +4,19 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1 class="heb">NBA injuries</h1>
+    <h1 class="heb">The history of injuries in the NBA</h1>
 </div>
 
 <div class="row">
     <div class="col-md-6">
-        <h2 class="heb">injuries during the last decade in the NBA</h2>
-        <p class="heb">
-            פציעות בספורט הוא גרום עיקרי לפרישות או לירידה ברמת המשחק ברחבי העולם ובכל ענפי הספורט
+        <h2 class="eng">Injuries during the last decade in the NBA</h2>
+        <p class="eng">
+            Injuries is the most popular cause to end a lots of careers in sport and especially in basketball
             <br /><br />
-            האתר יעסוק בפציעות בליגת הכדורסל הטובה בעולם ובעזרתו נוכל לנתח את הפציעה הנפוצה ביותר ואת הקבוצה 
-            עם הכי הרבה פציעות וכך אולי נוכל גם לקשר לשיטת האימון או לרופאי הקבוצה.
+            My site will show us all the nba injuries between the years 2010 - 2020
+            <br /><br />
+            <br /><br />
+            With help of the site we can come to a conclusion about the quality of the team doctors or about the difficulty of the team training
             <br /><br />
         </p>
     </div>
