--- a/DemoFormProject/templates/layout.html
+++ b/DemoFormProject/templates/layout.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="he">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,6 @@
                     <li><a href="{{ url_for('about') }}">About</a></li>
                     <li><a href="{{ url_for('contact') }}">Contact</a></li>
                     <li><a href="{{ url_for('Gallery') }}">Album</a></li>
-                    <li><a href="{{ url_for('Query') }}">Query</a></li>
                     <li><a href="{{ url_for('Login') }}">Login</a></li>
                     <li><a href="{{ url_for('Register') }}">Register</a></li>
                     <li><a href="{{ url_for('data') }}">Data</a></li>
