--- a/DemoFormProject/templates/about.html
+++ b/DemoFormProject/templates/about.html
@@ -4,43 +4,41 @@
 
 
 
-<div class="row">
-    <img class="contain" src={{ img_tichonet }} alt='Missing'>
-</div>
+
 <div class="row">
 
 </div>
 <div class="row">
     <div class="col-md-4">
-        <h2 class="heb"></h2>
-        <p class="heb">
+        <h2 class="eng"></h2>
+        <p class="eng">
 
         </p>
     </div>
-    <div class="col-md-8">
-        <h2 class="heb">על הפרויקט</h2>
-        <p class="heb">
-            הפרויקט הינו במסגרת מקצוע "מדעי הנתונים", של תלמידי שכבת י', תש"פ בתיכונט ע"ש אלתרמן בתל אביב.
+    <div class="eng">
+        <h2 class="eng">About the project</h2>
+        <p class="eng">
+            The site is a final project in Data Science int 10th grade in Tichonet
             <br /><br />
-            הפרויקט משלב שני תחומי ידע עיקריים:
+            The projact combines two areas of knowledge:
             <br /><br />
-            * תכנות בסביבת האינטרנט
+            * Data Science
             <br />
-            * מדעי הנתונים
+            * Programming in the Web Environment
             <br /><br />
-            במסגרת הפרויקט איתרתי מאגרי מידע ברשת ובכוונתי לבנות  סביבם אתר אינטרנט המאפשר גישה אל מאגרי המידע, ניתוח נתונים והצגתם בצורה נוחה למשתמשים. האתר יאפשר למשתמש לחקור את הנתונים בתחום הנבחר ולנסות להגיע לתובנות ומסקנות בעלות ערך.
+            In the project i found data bases in the web that i want to base my site on them that allows access to the data. The purpose of the site is to analyze the data and give the user the data in a more convenient way
             <br /><br />
-            הפרויקט יתבסס על המרכיבים הטכנולוגיים הבאים:
+            The project is based on the following technological components:
             <br /><br />
-            * שפת פייתון.
+            * Python
             <br />
-            * ספריית Pandas.
+            * Pandas
             <br />
-            * תשתית Flask לבניית שרת אינטרנט.
-            <br />
-            האתר יהיה בנוי סביב פציעות בליגת הכדורסל הטובה בעולם והמשתמשים יוכלו לחקור את הפציעות שקרו בעשור האחרון ולפי זה הם יוכלו גם להסיק לאיזה קבוצה יש את שיטת האימונים הבטוחה ביותר או את איכות רופאי הקבוצה
+            * Flask
         </p>
     </div>
+</div>
+
 </div>
 
 
