--- a/DemoFormProject/templates/login.html
+++ b/DemoFormProject/templates/login.html
@@ -9,6 +9,58 @@
     {% for message in messages %}
 <h3>{{ message[1] }}</h3>
 <br />
+ a.button {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 16px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        transition-duration: 0.4s;
+        cursor: pointer;
+    }
+
+        a.button span {
+            cursor: pointer;
+            display: inline-block;
+            position: relative;
+            transition: 0.5s;
+        }
+
+            a.button span:after {
+                content: '\00bb';
+                position: absolute;
+                opacity: 0;
+                top: 0;
+                right: -20px;
+                transition: 0.5s;
+            }
+
+        a.button:hover span {
+            padding-right: 25px;
+        }
+
+            a.button:hover span:after {
+                opacity: 1;
+                right: 0;
+            }
+
+    a.button4 {
+        background-color: white;
+        color: black;
+        border: 2px solid #e7e7e7;
+        -webkit-appearance: button;
+        -moz-appearance: button;
+        text-decoration: none;
+        color: initial;
+    }
+
+        a.button4:hover {
+            background-color: #e7e7e7;
+        }
     {% endfor %}
 {% endif %}
 {% endwith %}
@@ -52,10 +104,15 @@
                 <div class="input submit">
                     <input type="submit" value="Login">
                 </div>
-            <td>
-            <td></td>
-        </tr>
-    </table>
+                <div>
+
+                </div>
 </form>
+<h3>
+    Don't have a user? <a href="{{ url_for('Register') }}" class="button button4">Register Here</a>
+</h3>
+        </tr>
+
 
     {% endblock %}
+
