--- a/DemoFormProject/templates/nba.html
+++ b/DemoFormProject/templates/nba.html
@@ -27,19 +27,19 @@
         <tbody>
             <tr>
                 <td>Date</td>
-                <td class="heb">התאריך המדויק בו קרתה הפציעה</td>
+                <td>The date of the injury</td>
             </tr>
             <tr>
                 <td>Team</td>
-                <td>הקבוצה בה השחקן הפצוע שיחק</td>
+                <td>The team of the player the injured</td>
             </tr>
             <tr>
                 <td>Relinquished</td>
-                <td>שמו המלא של השחקן שנפצע</td>
+                <td>The name of the player that injured</td>
             </tr>
             <tr>
                 <td>Notes</td>
-                <td>הסבר על סוג הפציעה</td>
+                <td>The kind of the ijnjury</td>
             </tr>
         </tbody>
     </table>
