--- a/DemoFormProject/templates/data.html
+++ b/DemoFormProject/templates/data.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h2 class="heb">בדף זה נסביר על קבצי המידע עליהם האתר בנוי ונוכל לגשת אליהם ישירות</h2>
+<h2 class="eng">In this page we can see our data set that our site based on</h2>
 <h3></h3>
 
 <div class="row my-grid-borders">
@@ -11,7 +11,7 @@
 <div class="row my-grid-borders">
     <div class="col-md-5 my-grid-borders"><a href="{{ url_for('nba') }}">nba injuries Dataset</a></div>
     <div class="col-md-5 my-grid-borders">
-        <p ckass="heb">קובץ המידע על הפציעות בין השנים 2010 - 2020 בליגת הכדורסל הטובה בעולם</p>
+        <p ckass="heb">Data set of all NBA injuries between the years 2010 - 2020</p>
     </div>
 </div>
 
