--- a/DemoFormProject/templates/data.html
+++ b/DemoFormProject/templates/data.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h2 class="eng">In this page we can see our data set that our site based on</h2>
+<h2 class="eng">In this page we can see our data set that our site was based on</h2>
 <h3></h3>
 
 <div class="row my-grid-borders">
